[tool.poetry]
name = "cs150241project-networking"
version = "0.2.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^14.1"

[tool.poetry.include]
"**/*.pyi" = "typings"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

