[tool.poetry]
name = "cs150241project-networking"
version = "0.2.1"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
websockets = "^14.1"

[tool.poetry.include]
include = [{ path = "types", include = "**/*.pyi" }]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

